ChangeLog
---------

DONE
----


CURRENTLY DOING
---------------
Bug: Not recalculating stats on all status effects
Bug: The EXP on rewards only cares about the first two partyMembers
Feature: KeyItems Panel (should be significantly easier than the other two)
Feature: Quests
Feature: talkingWraith (greyWasteTombs) - A Lesser Wwraith that talks?!
Fix itemslot logic for showing defaults (no longer need to check null typed items)
Revert the pouch sprite back to something simple
Make combat and eventMAnagers disable the special panel when possible

Feature: Tutorial
    - Make a tutorial greyhide
    - For now just make text prompt tell player what to do next
    - Make it so UI slowly lights up
    - Set player to level 0 at the start (first fight with greyhide will level them up, allowing them their first skill point)
Feature: Companionship
    - Make it so partyMembers can talk about recent stuff at none events
    - Replace "friend" text with name text of companion

Bug: How did tristhal break the game off of safeguard?
Bug: Candlemancy kinda broken 
Bug: Bleeding status effect goes upwards instead of downwards on partymember
Bug: Status effects continue through subEvents
Bug: status effects don't display in the statusPanel
Fix: Make it so active skills are greyed out if 4 actives are already selected
Fix: The min/max in bars breaks for 3 digit mins and maxs


NEAR FUTURE
----------------
Feature: Sound effects and music
Feature: Tutorial
Feature: Saving
Feature: Ending and beginning cutscenes

FUTURE
------
Future: Prevent rekindling with no candles to rekindle
Clean Up: Might be stupid how im setting null type items to load stuff in on partyMember




